<resources>
    <string name="app_name">Donation 1.0</string>
    <string name="action_settings">Settings</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="donateTitle">Welcome Homer</string>
    <string name="donateSubtile">Please Give Generously</string>
    <string name="donateButton">Donate</string>
    <string name="Direct">Direct</string>
    <string name="PayPal">PayPal</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
</resources>
