<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/donateTitle"
        android:text="@string/donateTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/donateSubtitle"
        android:layout_below="@id/donateTitle"
        android:layout_alignParentStart="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="31dp"
        android:text="@string/donateSubtile"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/donateButton"
        android:text="@string/donateButton"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="47dp"
        android:layout_centerHorizontal="true"
        android:onClick="donateButtonPressed"
        />
    <RadioGroup
        android:id="@+id/paymentMethod"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@id/donateSubtitle"
        android:layout_alignParentStart="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="6dp"
        android:layout_toStartOf="@id/amountPicker">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/PayPal"
            android:checked="false"
            android:text="@string/PayPal"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Direct"
            android:checked="false"
            android:text="@string/Direct"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
    </RadioGroup>

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/amountPicker"
        android:layout_alignTop="@id/paymentMethod"
        android:layout_alignEnd="@id/donateSubtitle">
    </NumberPicker>

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@id/donateSubtitle"
        android:layout_above="@id/donateButton"
        android:indeterminate="false"
        android:paddingBottom="20dp">
    </ProgressBar>

</RelativeLayout>
